<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformacionExtraMaestroPokemon"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:text="@string/txtNombreMaestroPokemon"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/txtApellioMaestroPokemon"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/txtNumeroMedallas"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/txtNombreM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginTop="31dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/txtApellidoM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/txtNombreM"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreM" />

    <TextView
        android:id="@+id/txtMedallasM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/txtApellidoM"
        app:layout_constraintTop_toBottomOf="@+id/txtApellidoM" />

    <TextView
        android:id="@+id/txtCampeonM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/txtMedallasM"
        app:layout_constraintTop_toBottomOf="@+id/txtMedallasM" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="61dp"
        android:layout_height="0dp"
        android:text="@string/txtCampeonActual"
        app:layout_constraintBottom_toBottomOf="@+id/txtCampeonM"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/txtCampeonM" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="231dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtTituloDetalle"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewMostrarPokemons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewMostrarPokemons"
        android:layout_width="0dp"
        android:layout_height="253dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />
</android.support.constraint.ConstraintLayout>